# RD_DSP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.org
.claude/: CLAUDE.md  emission_random_plan.md  range_plan.md  settings.local.json
.claude/COMPLETED/: pulsardata_plan.md  range_plan.md
.claude/PULSAR_ACTIVITY_FLASH_PLAN/: RD_DSP_plan.md
.claude/STOCHASTIC_LAYOUT_PLAN/: RD_DSP_plan.md
.claude/WAVEFORM_FILE_MANAGER_PLAN/: PLAN_HISTORY.md  WAVEFORM_FILE_MANAGER_PLAN.md  WAVEFORM_FILE_MANAGER_PLAN_SUMMARY.md
.claude/WAVEFORM_GOLDEN_INTEGRATION/: PLAN_HISTORY.md  WAVEFORM_GOLDEN_INTEGRATION.md  WAVEFORM_GOLDEN_INTEGRATION_SUMMARY.md
.claude/WAVETABLE_DISPLAY_PLAN/: RD_DSP_plan.md
CMAKE/: SOURCES.cmake  TESTS.cmake
HELPER_SCRIPTS/: build_complete.py  build_standalone.py  build_tests.py  gen_golden_sine.py  rebuild_all.py  regenSource.py  regen_goldens.py
HELPER_SCRIPTS/SOUNDS/: failure_sound.wav.asd  success_sound.wav.asd
NOTES/: Create_Waveform_Plan.org  PulsarTrain_LoadWavetable_FromCSV.org  TEMP.org  devlog_2026_05_07.md
SOURCE/: RD_Buffer.cpp  RD_Buffer.h
SOURCE/HELPERS/: CsvLoader.cpp  CsvLoader.h
SOURCE/INTERPOLATOR/: Interpolator.h
SOURCE/OSCILLATOR/: Oscillator.cpp  Oscillator.h
SOURCE/PULSAR/: Pulsar.cpp  Pulsar.h  PulsarData.cpp  PulsarData.h  PulsarSynth.cpp  PulsarSynth.h  PulsarTrain.cpp  PulsarTrain.h  PulsarVoice.cpp  PulsarVoice.h
SOURCE/RANDOMIZER/: NormalizedRandomizer.cpp  NormalizedRandomizer.h  RandomizedParam.cpp  RandomizedParam.h  Randomizer.cpp  Randomizer.h
SOURCE/RANGE/: NormalizedRange.cpp  NormalizedRange.h  Range.cpp  Range.h
SOURCE/RD_BUFFER/: BufferFiller.cpp  BufferFiller.h  RD_Buffer.cpp  RD_Buffer.h
SOURCE/SYNTH/: Synth.cpp  Synth.h  SynthVoice.cpp  SynthVoice.h
SOURCE/WAVEFORM/: WaveFactory.cpp  WaveFactory.h  Waveform.cpp  Waveform.h  WaveformBufferFiller.cpp  WaveformBufferFiller.h  WaveformData.h  WaveformFileManager.h  Wavetable.cpp  Wavetable.h
SOURCE/WINDOW/: Window.cpp  Window.h
STANDALONE/: main.cpp
TESTS/: test_RD_Buffer.cpp  test_Waveform.cpp  test_main.cpp
TESTS/BUFFER_FILLER/: test_BufferFiller_fromCSV.cpp
TESTS/BUFFER_FILLER/GOLDEN/: All_Ones.csv  Incremental.csv
TESTS/GOLDEN/SINE/: GOLDEN_SINE_8096.csv
TESTS/HELPERS/: CsvLoader.cpp  CsvLoader.h
TESTS/OSCILLATOR/: test_Oscillator.cpp
TESTS/OSCILLATOR/GOLDEN/: GOLDEN_PHASE_INCREMENT.csv  generate_golden_oscillator_saw.py  generate_golden_oscillator_sine.py  generate_golden_oscillator_square.py  generate_golden_oscillator_triangle.py  generate_golden_phase_increment.py
TESTS/OSCILLATOR/GOLDEN/PHASE_INCREMENT/: GOLDEN_PHASE_INCREMENT_2048.csv  GOLDEN_PHASE_INCREMENT_8096.csv  GOLDEN_PHASE_INCREMENT_8192.csv
TESTS/OSCILLATOR/GOLDEN/SAW/: GOLDEN_OSC_SAW_441Hz_44100SR.csv  GOLDEN_OSC_SAW_663Hz_44100SR.csv  GOLDEN_OSC_SAW_882Hz_44100SR.csv
TESTS/OSCILLATOR/GOLDEN/SINE/: GOLDEN_OSC_SINE_441Hz_44100SR.csv  GOLDEN_OSC_SINE_663Hz_44100SR.csv  GOLDEN_OSC_SINE_882Hz_44100SR.csv
TESTS/OSCILLATOR/GOLDEN/SQUARE/: GOLDEN_OSC_SQUARE_441Hz_44100SR.csv  GOLDEN_OSC_SQUARE_663Hz_44100SR.csv  GOLDEN_OSC_SQUARE_882Hz_44100SR.csv
TESTS/OSCILLATOR/GOLDEN/TRIANGLE/: GOLDEN_OSC_TRIANGLE_441Hz_44100SR.csv  GOLDEN_OSC_TRIANGLE_663Hz_44100SR.csv  GOLDEN_OSC_TRIANGLE_882Hz_44100SR.csv
TESTS/PULSAR/: test_Pulsar.cpp  test_PulsarData.cpp  test_PulsarSynth.cpp  test_PulsarTrain.cpp  test_PulsarTrain_active.cpp  test_PulsarTrain_flash.cpp  test_PulsarVoice.cpp  test_Pulsar_active.cpp
TESTS/PULSAR/GOLDEN/: gen_golden_pulsar.py
TESTS/PULSAR/GOLDEN/OUTPUT/: GOLDEN_PULSAR_TUKEY_48000SR_200Hz_1C.csv
TESTS/PULSAR/GOLDEN/SCRIPTS/: gen_golden_pulsar.py
TESTS/PULSAR/GOLDEN/TUKEY/: GOLDEN_PULSAR_TUKEY_48000SR_200Hz_1C.csv
TESTS/RANDOMIZER/: test_NormalizedRandomizer.cpp  test_RandomizedParam.cpp  test_Randomizer.cpp
TESTS/RANGE/: test_NormalizedRange.cpp  test_Range.cpp
TESTS/RD_BUFFER/: test_BufferFiller.cpp  test_RD_Buffer.cpp
TESTS/SYNTH/: test_Synth.cpp  test_SynthVoice.cpp
TESTS/SYNTH/GOLDEN/: generate_golden_synth_sine.py
TESTS/SYNTH/GOLDEN/OUTPUT/: GOLDEN_SYNTH_SAW_M69_44100SR.csv  GOLDEN_SYNTH_SINE_M69_44100SR.csv  GOLDEN_SYNTH_SINE_M76_44100SR.csv  GOLDEN_SYNTH_SQUARE_M69_44100SR.csv  GOLDEN_SYNTH_TRIANGLE_M69_44100SR.csv
TESTS/SYNTH/GOLDEN/SCRIPTS/: generate_golden_synth_sine.py
TESTS/SYNTH/OUTPUT/: GOLDEN_SYNTH_SAW_M69_44100SR.csv  GOLDEN_SYNTH_SINE_M81_44100SR.csv  GOLDEN_SYNTH_SQUARE_M69_44100SR.csv  GOLDEN_SYNTH_TRIANGLE_M69_44100SR.csv
TESTS/WAVEFORM/: test_WaveFactory.cpp  test_Waveform.cpp  test_WaveformBufferFiller.cpp  test_WaveformFileManager.cpp  test_WaveformVariants.cpp  test_Wavetable.cpp
TESTS/WAVEFORM/GOLDEN/: README.org  gen_basic_waveform_table.py  gen_golden_saw.py  gen_golden_sine.py  gen_golden_square.py  gen_golden_triangle.py  gen_golden_triangle_table.py
TESTS/WAVEFORM/GOLDEN/ALT_WAVEFORMS/: GOLDEN_SAW_8192.csv
TESTS/WAVEFORM/GOLDEN/BASIC_TABLE/: GOLDEN_BASIC_WAVEFORM_TABLE_8096.csv
TESTS/WAVEFORM/GOLDEN/HARMONIC_DATA/: GOLDEN_SawWave_HarmonicData_HarmonicCount_16.json  GOLDEN_SineWave_HarmonicData.json  GOLDEN_SquareWave_HarmonicData_HarmonicCount_8.json  GOLDEN_TriangleWave_HarmonicData_16.json
TESTS/WAVEFORM/GOLDEN/SAW/: GOLDEN_SAW_8096.csv
TESTS/WAVEFORM/GOLDEN/SCRIPTS/: GOLDEN_SawWave_HarmonicData_16.json  GOLDEN_SineWave_HarmonicData_16.json  GOLDEN_SquareWave_HarmonicData_16.json  GOLDEN_TriangleWave_HarmonicData_16.json  find_peak_cell.py  gen_basic_waveform_table.py  gen_golden_waveform.py  gen_golden_wavetable.py  regen_goldens.py
TESTS/WAVEFORM/GOLDEN/SINE/: GOLDEN_SINE_8096.csv
TESTS/WAVEFORM/GOLDEN/SQUARE/: GOLDEN_SQUARE_8096.csv
TESTS/WAVEFORM/GOLDEN/TRIANGLE/: GOLDEN_TRIANGLE_8096.csv  GOLDEN_TRIANGLE_TABLE_8096.csv  GOLDEN_TRIANGLE_TABLE_8192.csv
TESTS/WAVEFORM/GOLDEN/WAVEFORM/: GOLDEN_SawWave_HarmonicData_HarmonicCount_16_8192.csv  (+3 more)
TESTS/WAVEFORM/OUTPUT/: WaveformFileManager_WriteWaveformToCSV_Output.csv  WaveformFileManager_WriteWavetableToCSV_Output.csv
TESTS/WINDOW/: test_Window.cpp
TESTS/WINDOW/GOLDEN/: gen_golden_window.py
(+42 files in other folders)
